# py_load_chembl

./: .gitignore  FRD_vs_Implementation.md  HOW_TO_LOAD_DATA.md  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/py_load_chembl/: __init__.py  api.py  cli.py  config.py  db_schemas.py  downloader.py  logging_config.py  pipeline.py  schema_parser.py  utils.py
src/py_load_chembl/adapters/: base.py  factory.py  postgres.py
tests/: conftest.py  docker-compose.yml  test_adapter_unit.py  test_api.py  test_cli.py  test_downloader.py  test_integration_postgres.py  test_placeholder.py  test_schema_parser.py  test_utils.py
tests/integration/: docker-compose.yml
tests/test_data/: checksums.txt
tests/test_data/chembl_xx_postgresql/: chembl_xx.sql  restore.sql
tests/unit/: test_adapter_factory.py  test_cli_unit.py  test_downloader.py
